updating Alarm to english, it's about time. get it?

--- a/src/main/resources/com/example/reloj3/hello-view.fxml
+++ b/src/main/resources/com/example/reloj3/hello-view.fxml
@@ -79,7 +79,7 @@
                <font>
                   <Font size="34.0" />
                </font></Label>
-            <Label text="ALARMA:" GridPane.halignment="CENTER">
+            <Label text="ALARM:" GridPane.halignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
